--- a/src/analysis/sandbox/model_explore/model_march.Rmd
+++ b/src/analysis/sandbox/model_explore/model_march.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'A "Tiered Assimilation, Match, and Model" (**TAMM**) approach for nationwide water system boundary estimation'
+title: 'A "Tiered Explicit, Match, and Model" (**TEMM**) approach for nationwide water system boundary estimation'
 output: 
   html_document:
     highlight: zenburn
@@ -37,7 +37,8 @@ output:
 
 </style>
 ```
-```{r setup, echo=FALSE}
+
+```{r setup, echo=FALSE, message = FALSE}
 library(knitr)
 library(here)
 library(ggplot2)
@@ -78,7 +79,7 @@ theme_report <- theme_minimal() + theme(panel.grid.minor = element_blank())
 
 In this report, we present a nationwide water service spatial boundary layer for community water systems and explain the tiered approach taken towards this end. This report builds on a previous technical memorandum ([`eda_february.html`](#)) that should be read as prerequisite material to understand the broader context, background, and exploratory data analysis (EDA) that informs the approach taken herein.
 
-The resulting national water service boundary layer is the product of a "Tiered Assimilation, Match, and Model" (henceforth, **TAMM**) approach. The TAMM is composed of three hierarchical tiers, arranged by data and model fidelity.
+The resulting national water service boundary layer is the product of a "Tiered Explicit, Match, and Model" (henceforth, **TEMM**) approach. The TEMM is composed of three hierarchical tiers, arranged by data and model fidelity.
 
 1.  Whenever present, we use *explicit water service boundaries* (labeled data). These are spatial polygon data, typically provided at the state-level.\
 2.  In the absence of explicit water service boundary data, we use a matching algorithm to match PWSIDs by spatial intersection and name to [TIGER place polygons](https://www.census.gov/geographies/mapping-files/time-series/geo/tiger-line-file.html){target="_blank"}. We validate this heuristic approach on explicit water service boundaries[^1], and find favorable results consistent with independent validation of the approach by [Patterson et al. (2019)](https://nicholasinstitute.duke.edu/publications/sensitivity-analysis-using-municipal-boundaries-proxy-service-area-boundaries-when){target="_blank"}.\
@@ -86,7 +87,7 @@ The resulting national water service boundary layer is the product of a "Tiered 
 
 [^1]: In a previous report (`eda_february.html`,"*Section* *6 TIGER proxy polygon appropriateness*"), we show that matching PWSID to TIGER places is highly accurate: matched TIGER place polygons intersected explicit water service boundary polygons 93.16% of the time. In this report, we further quantify this boolean (TRUE/FALSE) spatial intersection in terms of "percent overlap".
 
-Below is a conceptual diagram of the three tiers in the TAMM approach. Tier 1 boundary data always supersedes Tier 2 proxy boundaries, which in turn always supersedes Tier 3 modeled boundaries. Thus, the resulting the resulting water service boundary layer described in this report is combination of all three tiers, and depends on data availability for the water system, and whether or not it matches to a TIGER place.
+Below is a conceptual diagram of the three tiers in the TEMM approach. Tier 1 boundary data always supersedes Tier 2 proxy boundaries, which in turn always supersedes Tier 3 modeled boundaries. Thus, the resulting the resulting water service boundary layer described in this report is combination of all three tiers, and depends on data availability for the water system, and whether or not it matches to a TIGER place.
 
 ```{r conceptual model, echo = FALSE}
 include_graphics(here("src/analysis/sandbox/model_explore/etc/sl-march-2020.png"))
@@ -94,13 +95,13 @@ include_graphics(here("src/analysis/sandbox/model_explore/etc/sl-march-2020.png"
 
 In the sections that follow, we summarize our approach for each of the three tiers. As we move from Tier 1 to Tier 3, uncertainty increases, hence, we describe each Tier with increasing detail and provide measures of validation and uncertainty for Tier 2 and 3 estimates.
 
-Finally, we encourage the reader to consider the TAMM water service boundary layer not as a final product, but rather, one that may be improved with the assimilation of additional Tier 1 data, improvements to the Tier 2 matching algorithm, and refinement of the Tier 3 model. Ultimately, this entire workflow may be superseded by nationwide Tier 1 data, which would reduce the problem we address in the scope of work to one of simple Tier 1 data assimilation and cleaning.
+Finally, we encourage the reader to consider the TEMM water service boundary layer not as a final product, but rather, one that may be improved with the assimilation of additional Tier 1 data, improvements to the Tier 2 matching algorithm, and refinement of the Tier 3 model. Ultimately, this entire workflow may be superseded by nationwide Tier 1 data, which would reduce the problem we address in the scope of work to one of simple Tier 1 data assimilation and cleaning.
 
 <br>
 
 # Report outline
 
-The following outline reflects a summary of key findings, followed by a description of each Tier in the TAMM approach. Notably, the TAMM may be refined and re-run as new data sources are ingested or improvements are made to matching and modeling algorithms.
+The following outline reflects a summary of key findings, followed by a description of each Tier in the TEMM approach. Notably, the TEMM may be refined and re-run as new data sources are ingested or improvements are made to matching and modeling algorithms.
 
 *Key Results*
 
@@ -110,9 +111,9 @@ The following outline reflects a summary of key findings, followed by a descript
     -   Tier 2: Y% (count in millions)\
     -   Tier 3: Z% (count in millions)\
 -   Unequal Tier distribution across states suggests that the confidence in water service boundary location and extent varies by state and system.\
--   Uncertainty metrics for Tier 2 and 3 estimates suggest that the TAMM approach provides a reasonable preliminary water service boundary layer.
+-   Uncertainty metrics for Tier 2 and 3 estimates suggest that the TEMM approach provides a reasonable preliminary water service boundary layer.
 
-*Tier 1: Assimilated explicit boundaries*
+*Tier 1: Explicit boundaries*
 
 -   Data discovered for X states.\
 -   We consider these data as "high quality" and use them to model Tier 3 boundaries.
@@ -132,7 +133,7 @@ The following outline reflects a summary of key findings, followed by a descript
 
 # Key Results
 
-The key result of this study is a nationwide water service boundary layer. Here we show the proportion of population served by each TAMM Tier at nationwide and statewide scales.
+The key result of this study is a nationwide water service boundary layer. Here we show the proportion of population served by each TEMM Tier at nationwide and statewide scales.
 
 <br>
 
@@ -182,11 +183,11 @@ d <- read_csv(path(staging_path, "matched_output_clean.csv")) %>%
 pop_total <- sum(d$population_served_count)
 ```
 
-In total, the TAMM data layer represents tap water delivery to `r round(pop_total/1e6, 2)` million people served by `r format_bign(nrow(d))` water systems[^2].
+In total, the TEMM data layer represents tap water delivery to `r round(pop_total/1e6, 2)` million people served by `r format_bign(nrow(d))` water systems[^2].
 
 [^2]: Some water systems were excluded from this data layer. Specifically, 267 water systems were dropped because they had reported service connections or population less than 15, which we categorize as unreasonable given that community water systems are defined as serving at least 15 connections. We also assume that each connection must serve at least one person. Next, we removed 834 water systems associated with US territories; most excluded water systems in this step are found in Puerto Rico.
 
-```{r tamm nationwide coverage count and prop}
+```{r temm nationwide coverage count and prop}
 # calculate count and proportion of people served by each tier
 pop <- d %>% 
   group_by(tier) %>% 
@@ -198,9 +199,9 @@ pop <- d %>%
 
 About `r str_sub(pop$count, 1, 3)[1]` million people are covered by Tier 1 spatial data -- impressive given that only `r wsb_labeled_clean$state %>% unique() %>% length()` states that provided explicit boundary data. However, this relatively high coverage rate is unsurprising because these states (`r wsb_labeled_clean$state %>% unique() %>% sort() %>% paste(collapse = ", ")`) include notable centers of high-population like CA, TX, and PA.
 
-Together, around `r str_sub(sum((as.numeric(str_remove_all(pop$count[1:2], ",")))), 1, 3)` million people (`r sum(pop$prop[1:2])`% of the population) are covered by either a Tier 1 or a Tier 2 spatial boundary. The remaining approximately `r str_split(pop$count[3], ",", simplify = TRUE)[1]` million people (`r pop$prop[3]`%) are covered by a Tier 3 boundary. These results indicate high confidence in the spatial accuracy of the resulting TAMM water boundary layer for community water systems.
+Together, around `r str_sub(sum((as.numeric(str_remove_all(pop$count[1:2], ",")))), 1, 3)` million people (`r sum(pop$prop[1:2])`% of the population) are covered by either a Tier 1 or a Tier 2 spatial boundary. The remaining approximately `r str_split(pop$count[3], ",", simplify = TRUE)[1]` million people (`r pop$prop[3]`%) are covered by a Tier 3 boundary. These results indicate high confidence in the spatial accuracy of the resulting TEMM water boundary layer for community water systems.
 
-```{r tamm nationwide kable}
+```{r temm nationwide kable}
 pop %>% 
   kable(col.names = c("Tier", "Population count", "Population proportion (%)")) %>% 
   kableExtra::kable_styling(full_width = FALSE)
@@ -210,13 +211,13 @@ pop %>%
 
 ## Tier coverage - statewide
 
-Next, we show the proportion of population covered per TAMM Tier on a state-by-state basis. Notably:
+Next, we show the proportion of population covered per TEMM Tier on a state-by-state basis. Notably:
 
 -   When Tier 1 data is present (orange bars below), it tends to cover a majority of the population.\
 -   Tier 2 (blue bars below) covers more population than Tier 3 across all states.\
 -   Tier 3 coverage (grey bars below) is not uniform across states. This implies that the Tier 2 matching algorithm may perform better in some states, and may depend on factors that vary across states, like centroid accuracy and water system type (e.g., municipal).
 
-```{r geofacet tamm tier distribution per state}
+```{r geofacet temm tier distribution per state}
 # dataframe for barplot geofacet: population prop served by each tier
 dg <- d %>% 
   group_by(state_code) %>%
@@ -240,7 +241,7 @@ dg <- d %>%
 #   summarise(s = sum(prop, na.rm = TRUE)) %>% 
 #   pull(s) 
 
-# geofacet of TAMM tier coverage per state in terms of population proportion
+# geofacet of TEMM tier coverage per state in terms of population proportion
 dg %>% 
   ggplot(aes(tier, prop, fill = tier)) + 
   geom_col() + 
@@ -259,7 +260,7 @@ dg %>%
 
 A data table of the the above plot is provided below.
 
-```{r datatable tamm tier distribution per state}
+```{r datatable temm tier distribution per state}
 dg %>% 
   mutate(
     count = ifelse(is.na(count), 0, count),
@@ -274,23 +275,23 @@ dg %>%
 
 ## National boundary layer
 
-The national water service boundary layer is too large to plot in this interactive report, thus we show a static map below to illustrate the coverage provided by the Tiers 1-3 in the proportions described above, and direct the reader to the TAMM spatial layer in the project repository.  
+The national water service boundary layer is too large to plot in this interactive report, thus we show a static map below to illustrate the coverage provided by the Tiers 1-3 in the proportions described above, and direct the reader to the TEMM spatial layer in the project repository.  
 
-```{r tamm nationwide wsb}
-include_graphics(here("src/analysis/sandbox/model_explore/etc/tamm-nation.png"))
+```{r temm nationwide wsb}
+include_graphics(here("src/analysis/sandbox/model_explore/etc/temm-nation.png"))
 ```
 
 Here, we zoom into California, Nevada, and Oregon -- three states with high proportions of Tier 1, 2, and 3 spatial boundaries respectively. The Tier 3 circular buffers in this interactive map represent median (50th percentile) model estimates. Note that when clicking on polygons in the map below, only Tier 2 and 3 data 
 
-```{r tamm zoom ca nv or}
-# read TAMM output
-tamm <- here("tamm_layer/2022-03-26_tamm.geojson") %>% 
+```{r temm zoom ca nv or}
+# read TEMM output
+temm <- here("temm_layer/2022-03-26_temm.geojson") %>% 
   st_read(quiet = TRUE) %>% 
   # drop this column because it's read as a list and causes mapview trouble
   select(-service_area_type_code)
 
 # plot CA, NV, OR
-tamm %>% 
+temm %>% 
   filter(primacy_agency_code %in% c("CA", "NV", "OR")) %>% 
   mapview::mapview(zcol = "tier", burst = TRUE)
 ```
@@ -299,7 +300,7 @@ Next, we review the construction of each Tier.
 
 <br>
 
-# Tier 1: *Assimilated* boundaries
+# Tier 1: *Explicit* boundaries
 
 Tier 1 boundaries are the most straightforward to understand: states provide explicit data, and when they do, these boundaries tend to cover nearly the entire population served by water systems. Tier 1 data *missingness* challenges the accuracy of downstream Tier 2 and 3 boundary estimates. At the time of writing, Tier 1 data is present for `r wsb_labeled_clean$state %>% unique() %>% length()` states (`r wsb_labeled_clean$state %>% unique() %>% sort() %>% paste(collapse = ", ")`).
 
@@ -332,7 +333,7 @@ ggplot() +
        subtitle = paste("Last updated:", Sys.Date()))
 ```
 
-We assume that data provided by states is correct, and do not clean Tier 1 data beyond _assimilating_ the data across states into a single layer. 
+We assume that data provided by states is correct, and do not clean Tier 1 data beyond assimilating the data across states into a single layer. 
 
 
 <br>
@@ -357,7 +358,7 @@ tiger <- path(staging_path, "tigris_places_clean.geojson") %>%
   st_read(quiet = TRUE) %>% 
   select(tiger_match_geoid = geoid)
 
-t2 <- tamm %>% 
+t2 <- temm %>% 
   filter(tier == "Tier 1" & !is.na(tiger_match_geoid)) %>% 
   st_drop_geometry() %>% 
   select(tiger_match_geoid, pwsid) %>% 
@@ -369,7 +370,7 @@ t2 <- tamm %>%
   st_make_valid() 
 
 # Tier 1: explicit boundaries
-t1 <- tamm %>% 
+t1 <- temm %>% 
   filter(
     tier == "Tier 1" & 
     pwsid %in% t2$pwsid
@@ -411,7 +412,7 @@ t1$jacard <- as.numeric(t1$area_intersection / t1$area_t1)
 # t1$jacard[j]
 ```
 
-We calculate that `r round(nrow(filter(t1, jacard > 0))/nrow(t1), 2)`% of Tier 2 matched Tiger Place boundaries spatially intersect their assigned explicit Tier 1 boundary (when present). The proportion of overlap (Modified Jacard) for the `r round(nrow(filter(t1, jacard != 0))/nrow(t1), 2)`% of intersecting Tier 1 and 2 geometries is generally left-skewed, which indicates high overlap. A Jacard of 1 indicates complete overlap (i.e., the TIGER Place sufficient covers the explicit water system boundary), a Jacard of 0.1 indicates that only 10% of the Tier 1 explicit boundary is covered by the Tier 2 boundary, and a Jacard of 0 indicates zero percent overlap (i.e., non-intersection).  
+We calculate that `r round(100*(nrow(filter(t1, jacard > 0))/nrow(t1)), 2)`% of Tier 2 matched Tiger Place boundaries spatially intersect their assigned explicit Tier 1 boundary (when present). The proportion of overlap (Modified Jacard) for the `r round(100*(nrow(filter(t1, jacard != 0))/nrow(t1)), 2)`% of intersecting Tier 1 and 2 geometries is generally left-skewed, which indicates high overlap. A Jacard of 1 indicates complete overlap (i.e., the TIGER Place sufficient covers the explicit water system boundary), a Jacard of 0.1 indicates that only 10% of the Tier 1 explicit boundary is covered by the Tier 2 boundary, and a Jacard of 0 indicates zero percent overlap (i.e., non-intersection).  
 
 ```{r jacard histogram}
 t1 %>% 
@@ -422,7 +423,7 @@ t1 %>%
   theme_report
 ```
 
-`r round(nrow(filter(t1, jacard == 0))/nrow(t1), 2)`% of Tier 1 and 2 boundaries do not intersect, however we show that the vast majority of these geometries are very close to one another, which is unsurprising, as matches are constrained within state. The distribution of distance between centroids of non-intersecting matches is shown below. 
+`r round(100*(nrow(filter(t1, jacard == 0))/nrow(t1)), 2)`% of Tier 1 and 2 boundaries do not intersect, however we show that the vast majority of these geometries are very close to one another, which is unsurprising, as matches are constrained within state. The distribution of distance between centroids of non-intersecting matches is shown below. 
 
 ```{r jacard zeros how far from one another}
 # a substantial portion (almost half) of matched tier 2 geoms don't intersect
@@ -456,12 +457,14 @@ tibble(dist = zd) %>%
   theme_report 
 ```
 
-The median distance between matching Tier 1 and 2 geometries is `r round(median(zd), 2)` and the interquartile range is `r round(quantile(zd, 0.25), 2)` - `r round(quantile(zd, 0.75), 2)`. This suggests that non-spatially intersecting matches are _still very nearby_ and hence, may be considered adequate preliminary water service boundaries. However, if spatial accuracy is paramount, it may be determined that Tier 3 boundaries should be used instead of Tier 2 boundaries, specifically in cases where Tier 2 boundaries do not spatially intersect the provided ECHO centroid. 
+The median distance between matching Tier 1 and 2 geometries is `r round(median(zd), 2)` km and the interquartile range is `r round(quantile(zd, 0.25), 2)` - `r round(quantile(zd, 0.75), 2)` km. This suggests that non-spatially intersecting matches are _still very close together_ and hence, may be considered adequate preliminary water service boundaries. However, if spatial accuracy close than a few kilometers is paramount, it may be determined that Tier 3 boundaries should be used instead of Tier 2 boundaries, specifically in cases where Tier 2 boundaries do not spatially intersect the provided ECHO centroid. 
 
 
 <br>
 
 # Tier 3: *Modeled* boundaries
+
+In the absence of explicit spatial boundaries (Tier 1) and matched TIGER proxy boundaries (Tier 2), we use statistics to model an estimated boundary (Tier 3).
 
 We experimented with 3 different models: random forest, xgboost, and multiple linear regression. Model specification hinges on the correlation between the radius of Tier 1 convex hulls[^3] (the response variable), and predictors that explain this response, such as service connection count, population served, ownership type and so on. Moreover, different statistical and machine learning models have different assumptions and performance, which are discussed in the sections that follow.
 
